opam-version: "2.0"
name: "tyre"
maintainer: "Gabriel Radanne <drupyog@zoho.com>"
authors: "Gabriel Radanne <drupyog@zoho.com>"
homepage: "https://github.com/Drup/tyre"
doc: "https://ocaml.org/p/tyre/latest"
bug-reports: "https://github.com/Drup/tyre/issues"
license: "ISC"
dev-repo: "git+https://github.com/Drup/tyre.git"
tags: [ "regex" ]

build: [
  ["dune" "subst"]{pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]


depends: [
  "ocaml" { >= "4.03.0" }
  "dune" {build & >= "1.0"}
  "result"
  "seq"
  "re" {>= "1.8.0"}
  "gen" {with-test & >= "1.0"}
  "containers" {with-test & >= "3.0"}
  "alcotest" {with-test & >= "0.8.0"}
  "angstrom" {with-test & >= "0.16.1"}
  "odoc" { with-doc }
]

synopsis: "Typed Regular Expressions"

description: """
Tyre is a set of combinators to build type-safe regular expressions,
allowing automatic extraction and modification of matched groups.
Tyre is bi-directional: a typed regular expressions can be used for
parsing and unparsing. It also allows routing, by providing a list of
regexs/routes and their handlers
"""
